config: configure project to zahrane's workspace